// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpcomingAppointmentAlert Component should show specific banner if next appointment is today 1`] = `
<div>
  <div
    class="primary"
    id="test"
  >
    <div
      aria-live="polite"
      class="lds-alert info"
      id="upcoming-appointment-alert"
      role="alert"
    >
      <div
        class="lds-alert-message"
      >
        <button
          class="lds-button-base lds-alert-button"
          data-testid="dismiss-upcoming-appointment-banner"
          type="button"
        >
          <svg
            aria-labelledby="lds-icon-X-title-123456789 lds-icon-X-description-123456789"
            class="lds-icon icon-X inline closeIconWhite"
            focusable="false"
            role="img"
          >
            <title
              id="lds-icon-X-title-123456789"
            >
              close
            </title>
            <desc
              id="lds-icon-X-description-123456789"
            />
            <svg
              viewBox="0 0 256 256"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
              />
            </svg>
          </svg>
        </button>
        <div
          class="alert"
        >
          <div
            class="infoIcon"
          >
            <svg
              aria-labelledby="lds-icon-InfoFill-title-123456789 lds-icon-InfoFill-description-123456789"
              class="lds-icon icon-InfoFill"
              classes="lds-alert-icon info"
              focusable="false"
              role="img"
            >
              <title
                id="lds-icon-InfoFill-title-123456789"
              >
                info
              </title>
              <desc
                id="lds-icon-InfoFill-description-123456789"
              />
              <svg
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-4,48a12,12,0,1,1-12,12A12,12,0,0,1,124,72Zm12,112a16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40a8,8,0,0,1,0,16Z"
                />
              </svg>
            </svg>
          </div>
          <span
            class="alertContent"
          >
            Your next appointment is today.
             
            <a
              aria-label="View your appointments"
              class="lds-link upcomingAppointmentAlertLink"
              data-testid="view-appointments-banner-link"
            >
              View your appointments
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpcomingAppointmentAlert Component should show upcoming appointment alert banner for 1 day from now 1`] = `
<div>
  <div
    class="primary"
    id="test"
  >
    <div
      aria-live="polite"
      class="lds-alert info"
      id="upcoming-appointment-alert"
      role="alert"
    >
      <div
        class="lds-alert-message"
      >
        <button
          class="lds-button-base lds-alert-button"
          data-testid="dismiss-upcoming-appointment-banner"
          type="button"
        >
          <svg
            aria-labelledby="lds-icon-X-title-123456789 lds-icon-X-description-123456789"
            class="lds-icon icon-X inline closeIconWhite"
            focusable="false"
            role="img"
          >
            <title
              id="lds-icon-X-title-123456789"
            >
              close
            </title>
            <desc
              id="lds-icon-X-description-123456789"
            />
            <svg
              viewBox="0 0 256 256"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
              />
            </svg>
          </svg>
        </button>
        <div
          class="alert"
        >
          <div
            class="infoIcon"
          >
            <svg
              aria-labelledby="lds-icon-InfoFill-title-123456789 lds-icon-InfoFill-description-123456789"
              class="lds-icon icon-InfoFill"
              classes="lds-alert-icon info"
              focusable="false"
              role="img"
            >
              <title
                id="lds-icon-InfoFill-title-123456789"
              >
                info
              </title>
              <desc
                id="lds-icon-InfoFill-description-123456789"
              />
              <svg
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-4,48a12,12,0,1,1-12,12A12,12,0,0,1,124,72Zm12,112a16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40a8,8,0,0,1,0,16Z"
                />
              </svg>
            </svg>
          </div>
          <span
            class="alertContent"
          >
            Your next appointment is in 1 day.
             
            <a
              aria-label="View your appointments"
              class="lds-link upcomingAppointmentAlertLink"
              data-testid="view-appointments-banner-link"
            >
              View your appointments
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UpcomingAppointmentAlert Component should show upcoming appointment alert banner for 14 days from now 1`] = `
<div>
  <div
    class="primary"
    id="test"
  >
    <div
      aria-live="polite"
      class="lds-alert info"
      id="upcoming-appointment-alert"
      role="alert"
    >
      <div
        class="lds-alert-message"
      >
        <button
          class="lds-button-base lds-alert-button"
          data-testid="dismiss-upcoming-appointment-banner"
          type="button"
        >
          <svg
            aria-labelledby="lds-icon-X-title-123456789 lds-icon-X-description-123456789"
            class="lds-icon icon-X inline closeIconWhite"
            focusable="false"
            role="img"
          >
            <title
              id="lds-icon-X-title-123456789"
            >
              close
            </title>
            <desc
              id="lds-icon-X-description-123456789"
            />
            <svg
              viewBox="0 0 256 256"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
              />
            </svg>
          </svg>
        </button>
        <div
          class="alert"
        >
          <div
            class="infoIcon"
          >
            <svg
              aria-labelledby="lds-icon-InfoFill-title-123456789 lds-icon-InfoFill-description-123456789"
              class="lds-icon icon-InfoFill"
              classes="lds-alert-icon info"
              focusable="false"
              role="img"
            >
              <title
                id="lds-icon-InfoFill-title-123456789"
              >
                info
              </title>
              <desc
                id="lds-icon-InfoFill-description-123456789"
              />
              <svg
                viewBox="0 0 256 256"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-4,48a12,12,0,1,1-12,12A12,12,0,0,1,124,72Zm12,112a16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40a8,8,0,0,1,0,16Z"
                />
              </svg>
            </svg>
          </div>
          <span
            class="alertContent"
          >
            Your next appointment is in 14 days.
             
            <a
              aria-label="View your appointments"
              class="lds-link upcomingAppointmentAlertLink"
              data-testid="view-appointments-banner-link"
            >
              View your appointments
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
